--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "run-sequence": "^1.1.5"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.16",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
     "angular-ui-bootstrap": "^2.5.0",
-    "angular-ui-router": "^1.0.3",
     "bluebird": "^3.5.0",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.7.0",
