--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ng-csv": "^0.3.6",
+    "ng-file-upload": "^12.2.13",
     "ng-tags-input": "^3.2.0",
     "ui-select": "^0.19.8"
   }
