--- a/src/environment_config.json
+++ b/src/environment_config.json
@@ -1,18 +1,18 @@
 {
   "development": {
-    "SITE_URL": "http://10.10.10.10:8080",
+    "SITE_URL": "http://10.10.10.10:8080/",
     "API_BASE_URL": "http://10.10.10.10:8080/api/",
     "AUTH_URL": "",
     "DEMO_ENABLED": true
   },
   "qa": {
-    "SITE_URL": "",
+    "SITE_URL": "/",
     "API_BASE_URL": "/api/",
     "AUTH_URL": "/api/user/",
     "DEMO_ENABLED": false
   },
   "production": {
-    "SITE_URL": "",
+    "SITE_URL": "/",
     "API_BASE_URL": "/api/",
     "AUTH_URL": "/api/user/",
     "DEMO_ENABLED": false
