--- a/docker/server.conf
+++ b/docker/server.conf
@@ -4,6 +4,7 @@ upstream internalbackend {
 server {
   listen       80;
   server_name  localhost;
+  server_tokens off;
   location = /api {
     return 302 /api/;
   }
