--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jquery": "^3.2.1",
     "ng-csv": "^0.3.6",
     "ng-file-upload": "^12.2.13",
+    "ng-infinite-scroll": "^1.3.0",
     "ng-tags-input": "^3.2.0",
     "ui-select": "^0.19.8"
   }
