--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "PTSans-Regular": "https://google-fonts.azurewebsites.net/googleFonts/ptsans?family=PT+Sans:400",
-    "PTSans-Italic": "https://google-fonts.azurewebsites.net/googleFonts/ptsans?family=PT+Sans:400i",
-    "PTSans-Bold": "https://google-fonts.azurewebsites.net/googleFonts/ptsans?family=PT+Sans:700",
-    "PTSans-BoldItalic": "https://google-fonts.azurewebsites.net/googleFonts/ptsans?family=PT+Sans:700i"
+    "PTSans-Regular": "https://fonts.googleapis.com/css?family=PT+Sans",
+    "PTSans-Italic": "https://fonts.googleapis.com/css?family=PT+Sans:400i",
+    "PTSans-Bold": "https://fonts.googleapis.com/css?family=PT+Sans:700",
+    "PTSans-BoldItalic": "https://fonts.googleapis.com/css?family=PT+Sans:700i"
   }
 }
