--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
     "ng-tags-input": "^3.2.0",
+    "npm": "^6.14.4",
     "ui-select": "^0.19.8"
   }
 }
