--- a/package.json
+++ b/package.json
@@ -23,34 +23,35 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.8.0",
+    "gulp": "^4.0.2",
+    "gulp-angular-templatecache": "^3.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.0",
-    "gulp-ng-config": "^1.4.0",
+    "gulp-ng-config": "^1.5.1",
     "gulp-rev-all": "^0.8.22",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "^4.1.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
-    "http-server": "^0.10.0",
-    "node-sass": "^4.3.0",
+    "http-server": "^0.12.3",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.1",
     "run-sequence": "^1.1.5"
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.16",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-sanitize": "^1.5.8",
-    "angular-touch": "^1.5.8",
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-touch": "1.5.8",
     "angular-ui-bootstrap": "^2.5.0",
     "bluebird": "^3.5.0",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "gulp-replace": "^1.0.0",
+    "jquery": "^3.5.1",
     "ng-csv": "^0.3.6",
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
