--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:8-jessie as front_builder
+FROM node:14-stretch as front_builder
 WORKDIR /app
 COPY ./package.json /app
 COPY ./package-lock.json /app
