Create temporarily fix for missing templateCaches in production build.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:8-jessie as front_builder
+FROM node:14.4.0-stretch as front_builder
 WORKDIR /app
 COPY ./package.json /app
 COPY ./package-lock.json /app
@@ -6,6 +6,7 @@ RUN npm install
 COPY ./src /app/src
 COPY ./gulpfile.js /app
 ARG env=prod
+RUN npm run build -- --qa
 RUN npm run build -- --production
 
 FROM openresty/openresty:1.13.6.2-stretch
