--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "angular-animate": "1.6.10",
     "angular-sanitize": "1.6.10",
     "angular-touch": "1.6.10",
+    "angular-cookies": "1.6.10",
     "angular-ui-bootstrap": "^2.5.0",
     "bluebird": "^3.5.0",
     "bootstrap-sass": "^3.3.7",
