--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.16",
-    "angular": "1.6.10",
-    "angular-animate": "1.6.10",
-    "angular-sanitize": "1.6.10",
-    "angular-touch": "1.6.10",
+    "angular": "1.8.2",
+    "angular-animate": "1.8.2",
+    "angular-drag-and-drop-lists": "2.1.0",
+    "angular-sanitize": "1.8.2",
+    "angular-touch": "1.8.2",
     "angular-ui-bootstrap": "^2.5.0",
     "bluebird": "^3.5.0",
     "bootstrap-sass": "^3.3.7",
@@ -56,7 +57,7 @@
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
     "ng-tags-input": "^3.2.0",
-    "npm": "^6.14.4",
+    "npm": "^6.14.8",
     "ui-select": "^0.19.8"
   }
 }
