--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "repository": "https://github.com/CSCfi/justus-frontend",
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
     "del": "^2.0.2",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -33,7 +32,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^1.4.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-util": "^3.0.7",
     "http-server": "^0.12.3",
     "node-sass": "^4.14.1",
