--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@uirouter/angularjs": "^1.0.16",
     "angular": "1.8.2",
     "angular-animate": "1.8.2",
+    "angular-cookies": "^1.8.2",
     "angular-drag-and-drop-lists": "2.1.0",
     "angular-sanitize": "1.8.2",
     "angular-touch": "1.8.2",
